--- a/posts/dictPrimitivenumberType.mdx
+++ b/posts/dictPrimitivenumberType.mdx
@@ -7,7 +7,8 @@ summary: "JavaScript/TypeScript 이슈 사전 : Primitive number Type 편"
 ## 배경
 
 해당 글의 배경은 [JavaScript/TypeScript 사전: Primitive boolean Type](https://gittoblog.vercel.app/blog/dictPrimitivebooleanType)에서 확인할 수 있습니다.
-배경 내에는 TypeScript에 대한 간단한 설명과 Primitive Type 및 첫번째 타입인 boolean Type에 대한 설명글로 이루어져 있습니다.
+배경 내에는 TypeScript에 대한 간단한 설명과 Primitive Type 및 첫 번째 타입인 boolean Type에 대한 문법 및 코드 컨벤션의 종류로 이루어져 있습니다.
+해당 글은 number Type에 대한 문법 및 코드 컨벤션의 종류로 진행됩니다.
 
 ## number Type Issue
 
