--- a/posts/dictArrayType.mdx
+++ b/posts/dictArrayType.mdx
@@ -10,7 +10,7 @@ summary: "JavaScript/TypeScript 이슈 사전 : Array Type 편"
 
 ## Array Type Issue
 
-#### 1. 타입 불일치 문제
+#### 타입 불일치 문제
 
 - **문제**: 배열에 예상하지 못한 다른 타입의 값을 실수로 추가하는 경우. 이는 런타임 오류를 초래하거나 예상치 못한 동작으로 이어질 수 있습니다.
 - **영향**: 특히 여러 개발자가 협업하는 프로젝트에서는 이러한 문제가 더 빈번히 발생할 수 있습니다.
@@ -27,7 +27,7 @@ const numbers: number[] = [1, 2, 3];
 // numbers.push('4'); // 컴파일 단계에서 오류 발생
 ```
 
-#### 2. 직접적인 배열 변경
+#### 직접적인 배열 변경
 
 - **문제**: `push`, `pop` 등의 메서드는 원본 배열을 직접 변경하여 예기치 않은 동작을 발생시킬 수 있습니다.
 - **영향**: 참조된 다른 코드가 영향을 받아 디버깅이 복잡해질 수 있습니다.
@@ -45,7 +45,7 @@ const updated = [...original, 4];
 console.log(updated); // [1, 2, 3, 4] - 원본 배열 유지
 ```
 
-#### 3. 빈 배열 처리 미비
+#### 빈 배열 처리 미비
 
 - **문제**: 빈 배열에서 요소를 참조하려고 시도할 때 런타임 오류가 발생할 수 있습니다.
 - **영향**: 예상치 못한 프로그램 종료를 초래하거나 잘못된 데이터를 반환할 수 있습니다.
@@ -62,7 +62,7 @@ const firstItem = emptyArray[0] ?? "기본값";
 console.log(firstItem); // '기본값'
 ```
 
-#### 4. 인덱스 범위 초과 접근
+#### 인덱스 범위 초과 접근
 
 - **문제**: 배열 인덱스 범위를 초과하여 접근하려고 시도하면 `undefined` 값을 반환합니다. 이로 인해 예기치 않은 동작이 발생할 수 있습니다.
 - **영향**: 잘못된 데이터 처리가 연쇄적으로 이어질 가능성이 높습니다.
@@ -79,7 +79,7 @@ const value = items[5] ?? "범위를 벗어남";
 console.log(value); // '범위를 벗어남'
 ```
 
-#### 5. 다차원 배열의 예기치 않은 타입
+#### 다차원 배열의 예기치 않은 타입
 
 - **문제**: 다차원 배열에서 내부 배열의 타입이 일관되지 않으면 오류가 발생할 수 있습니다.
 - **영향**: 다차원 배열의 타입 체크가 어렵고, 예상치 못한 런타임 오류가 발생할 가능성이 있습니다.
@@ -100,7 +100,7 @@ const matrix: number[][] = [
 
 ## Convention of Array Type
 
-#### 1. 명시적인 타입 정의
+#### 명시적인 타입 정의
 
 - **의도**: 배열의 요소 타입을 명확히 정의하여 코드의 목적을 분명히 합니다.
 - **효과**: 잘못된 데이터를 방지하며, 타입 정의를 통해 유지보수가 용이해집니다.
@@ -110,7 +110,7 @@ const matrix: number[][] = [
 const fruits: string[] = ["apple", "banana", "cherry"];
 ```
 
-#### 2. ReadonlyArray 활용
+#### ReadonlyArray 활용
 
 - **의도**: 배열을 불변으로 처리하여 원본 데이터가 변경되지 않도록 보장합니다.
 - **효과**: 데이터 무결성을 유지하고, 의도치 않은 변경을 방지합니다.
@@ -121,7 +121,7 @@ const readOnlyArray: ReadonlyArray<string> = ["a", "b", "c"];
 // readOnlyArray.push('d'); // 오류: 'push'는 ReadonlyArray에서 사용할 수 없습니다.
 ```
 
-#### 3. 안전한 반복문 사용
+#### 안전한 반복문 사용
 
 - **의도**: 배열 요소를 안전하고 명확하게 처리합니다.
 - **효과**: `for-of`와 같은 구문은 반복 작업의 가독성과 안정성을 동시에 제공합니다.
@@ -134,7 +134,7 @@ for (const fruit of fruits) {
 }
 ```
 
-#### 4. 배열 병합 및 변환
+#### 배열 병합 및 변환
 
 - **의도**: 스프레드 연산자를 사용하여 간결하고 직관적으로 배열을 병합합니다.
 - **효과**: 원본 배열을 변경하지 않으면서 새로운 배열을 생성합니다.
@@ -147,7 +147,7 @@ const combined = [...numbers, ...strings];
 console.log(combined); // [1, 2, 3, 'a', 'b', 'c']
 ```
 
-#### 5. 타입 가드 활용
+#### 타입 가드 활용
 
 - **의도**: 배열 요소의 타입을 검사하여 안전하게 처리합니다.
 - **효과**: 타입 검사 및 변환 과정을 명확히 하여 런타임 오류를 방지합니다.
@@ -162,7 +162,7 @@ mixed.forEach((item) => {
 });
 ```
 
-#### 6. 제네릭 배열 타입
+#### 제네릭 배열 타입
 
 - **의도**: 배열 타입을 제네릭으로 정의하여 재사용성을 높이고, 다양한 데이터 타입을 처리합니다.
 - **효과**: 유연한 코드를 작성할 수 있으며, 재사용 가능한 함수와 인터페이스 작성에 적합합니다.
