--- a/posts/dictObjectType.mdx
+++ b/posts/dictObjectType.mdx
@@ -61,7 +61,7 @@ const obj: C = { x: 42 }; // 오류 발생 (number와 string 타입 충돌)
 
 - **문제**: TypeScript에서 빈 객체 {}는 모든 객체 타입과 호환되지만, 예상치 못한 타입 오류를 유발할 수 있습니다.
 - **영향**: 빈 객체 타입을 사용하면 특정 속성을 정의하지 않아도 되지만, 타입 안정성을 해치고 예상치 못한 오류를 발생시킬 수 있습니다.
-- **중요성**: 빈 객체를 사용할 때는 구체적인 타입을 정의하거나, Record<string, unknown>과 같은 타입을 사용하는 것이 보다 안전합니다.
+- **중요성**: 빈 객체를 사용할 때는 구체적인 타입을 정의하거나, `Record<string, unknown>`과 같은 타입을 사용하는 것이 보다 안전합니다.
 
 ```
 const obj: {} = {};
@@ -91,7 +91,7 @@ type User = {
 
 - **의도**: Index Signature보다 직관적인 방법으로 객체의 키-값 구조를 정의하고자 합니다.
 - **효과**: 타입 안정성이 높아지고, 예측 가능한 객체 구조를 유지할 수 있습니다.
-- **적용성**: Record<K, V>를 활용하여 객체의 키와 값 타입을 명확하게 정의할 수 있습니다.
+- **적용성**: `Record<K, V>`를 활용하여 객체의 키와 값 타입을 명확하게 정의할 수 있습니다.
 
 ```
 const scores: Record<string, number> = {
@@ -130,7 +130,7 @@ const { theme, language = "en" } = config;
 
 - **의도**: 빈 객체를 사용할 때 명확한 타입을 정의하여 타입 안정성을 보장합니다.
 - **효과**: 예상치 못한 타입 오류를 방지하고, 보다 안전한 코드 작성을 할 수 있습니다.
-- **적용성**: 빈 객체를 정의할 때 Record<string, unknown> 또는 Partial<T>를 활용하는 것이 좋습니다.
+- **적용성**: 빈 객체를 정의할 때 `Record<string, unknown>` 또는 `Partial<T>`를 활용하는 것이 좋습니다.
 
 ```
 const obj: Record<string, unknown> = {};
